[package]
name = "bluepill-websockets"
version = "0.1.0"
authors = ["David Haig <david@ninjasource.com>"]
edition = "2018"

[dependencies]
panic-itm = "0.4.1"
nb = "0.1.2"
cortex-m-rt = "0.6.8"
cortex-m = "0.6.0"
embedded-websockets = { path = "../embedded-websockets" }
w5500 = { path = "../w5500" }
embedded-hal = "0.2.3"
#stm32f1 = "0.5.0"

[dependencies.stm32f1xx-hal]
version = "0.3.0"
features = ["stm32f103", "rt"]

[features]
doc = []
rt = ["stm32f1xx-hal/rt"]
stm32f103 = ["stm32f1xx-hal/stm32f103"]