[package]
name = "bluepill-websockets"
version = "0.1.0"
authors = ["David Haig <david@ninjasource.com>"]
edition = "2018"

[dependencies]
panic-itm = "0.4.1"
nb = "0.1.2"
cortex-m-rt = "0.6.8"
cortex-m = "0.6.0"
embedded-websockets = { path = "../embedded-websockets" }
w5500 = { path = "../w5500" }
embedded-hal = "0.2.3"

[dependencies.stm32f1xx-hal]
version = "0.3.0"
features = ["stm32f103", "rt"]

[features]
doc = []
rt = ["stm32f1xx-hal/rt"]
stm32f103 = ["stm32f1xx-hal/stm32f103"]

# this allows debugging in release mode (otherwise you only see assembly)
[profile.release]
debug = true

# this makes the binary small enough to fit on the device while still being able to build and upload in debug mode
[profile.dev]
opt-level = 's'